@@ -46,6 +46,8 @@
    $languages["ca"]["CHARSET"] = "iso-8859-1";
 	$languages["sr"]["NAME"]	 = "Serbian";
 	$languages["sr"]["CHARSET"] = "iso-8859-2";
+	$languages["tw"]["NAME"]    = "Taiwan";
+	$languages["tw"]["CHARSET"] = "big5";
 
    // Decodes a string to the internal encoding from the given charset
    function charset_decode ($charset, $string) {
